tests/ui/free_desc.stderr
error[E0505]: cannot move out of `conn` because it is borrowed
  --> $DIR/free_desc.rs:43:35
   |
40 |     SQLAllocHandle(SQL_HANDLE_DESC, &conn, &mut desc);
   |                                     ----- borrow of `conn` occurs here
...
43 |     SQLFreeHandle(SQL_HANDLE_DBC, conn);
   |                                   ^^^^ move out of `conn` occurs here
44 |     SQLFreeHandle(SQL_HANDLE_DESC, desc);
   |                                    ---- borrow later used here
